[tool.poetry]
name = "controller"
version = "0.1.0"
description = ""
authors = ["markushik <zem_mark@yahoo.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
aiogram = "^3.0.0b5"
asyncpg = "^0.27.0"
dynaconf = "^3.1.11"
flake8 = "^5.0.4"
flake8-bugbear = "^22.10.27"
greenlet = "^2.0.0"
loguru = "^0.6.0"
redis = "^4.3.4"
setuptools = "^65.5.0"
sqlalchemy = "^1.4.42"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
