[tool.poetry]
name = "controller"
version = "0.1.0"
description = ""
authors = ["markushik <zem_mark@yahoo.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
aiogram = "^3.0.0b6"
aiogram-dialog = "^2.0.0b15"
aiohttp = "^3.8.3"
aioredis = "^2.0.1"
alembic = "^1.8.1"
asyncpg = "^0.27.0"
dynaconf = "^3.1.11"
loguru = "^0.6.0"
poetry-plugin-sort = "^0.1.1"
redis = "^4.3.4"
setuptools = "^65.5.0"
sqlalchemy = "^1.4.42"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
flake8-bugbear = "^22.12.6"
flake8-fixme = "^1.1.1"
flake8-isort = "^6.0.0"
flake8-pyproject = "^1.2.2"
flake8-return = "^1.2.0"
isort = "^5.11.2"
requests = "^2.28.1"


[tool.flake8]
ignore = ['F821']
max-line-length = 120


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
